kubernetes/infrastructure/config/main/istio-system/istio-system/local.gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: local
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-local
spec:
  gatewayClassName: istio
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${LOCAL_DOMAIN}
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${LOCAL_DOMAIN}
      name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${LOCAL_DOMAIN}"
      name: http-wildcard
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${LOCAL_DOMAIN}"
      name: https-wildcard
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
