kubernetes/infrastructure/config/main/istio-system/istio-system/public.gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-public-prod
spec:
  gatewayClassName: istio
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${PUBLIC_DOMAIN}
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${PUBLIC_DOMAIN}
      name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: public-tls
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${PUBLIC_DOMAIN}"
      name: http-wildcard
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${PUBLIC_DOMAIN}"
      name: https-wildcard
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: public-tls
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${PUBLIC_DOMAIN}"
      name: 8080-https-wildcard
      port: 8080
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: public-tls
